--- a/composer.json
+++ b/composer.json
@@ -11,6 +11,7 @@
         "laravel/sanctum": "^3.0",
         "laravel/tinker": "^2.7",
         "laravel/ui": "^4.2",
+        "vimeo/laravel": "^5.8",
         "yajra/laravel-datatables": "^9.0"
     },
     "require-dev": {
