--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,12 @@
 /public/build
 /public/hot
 /public/storage
+/public/assets/images/courses/*
+/public/assets/images/bundle-courses/*
+/public/assets/images/instructor/*
+/public/assets/images/students/*
+/public/assets/images/lessons/*
+/public/assets/images/modules/*
 /storage/*.key
 /vendor
 .env
@@ -17,4 +23,5 @@ yarn-error.log
 /.idea
 /.vscode
 composer.lock
+.DS_Store
 ```
