--- a/composer.json
+++ b/composer.json
@@ -13,8 +13,7 @@
         "laravel/tinker": "^2.7",
         "laravel/ui": "^4.2",
         "stripe/stripe-php": "^10.14",
-        "vimeo/laravel": "^5.8",
-        "yajra/laravel-datatables": "^9.0"
+        "vimeo/laravel": "^5.8"
     },
     "require-dev": {
         "barryvdh/laravel-debugbar": "^3.8",
