--- a/composer.json
+++ b/composer.json
@@ -13,6 +13,7 @@
         "laravel/sanctum": "^3.0",
         "laravel/tinker": "^2.7",
         "laravel/ui": "^4.2",
+        "php-flasher/flasher-laravel": "^1.15",
         "stripe/stripe-php": "^10.14",
         "vimeo/laravel": "^5.8"
     },
