--- a/storage/app/.gitignore
+++ b/storage/app/.gitignore
@@ -4,8 +4,8 @@
 /public/storage
 /public/assets/images/courses/*
 /public/assets/images/courses/*
-/public/assets/images/users/*
-/public/assets/images/users/*
+/public/uploads/users/*
+/public/uploads/users/*
 /public/assets/images/lessons/*
 /public/assets/images/modules/*
 /public/assets/images/setting/*
