--- a/composer.json
+++ b/composer.json
@@ -16,6 +16,7 @@
         "laravel/tinker": "^2.7",
         "laravel/ui": "^4.2",
         "php-flasher/flasher-laravel": "^1.15",
+        "pusher/pusher-php-server": "^7.2",
         "stripe/stripe-php": "^10.14",
         "vimeo/laravel": "^5.8"
     },
