--- a/composer.json
+++ b/composer.json
@@ -13,6 +13,7 @@
         "intervention/image": "^2.7",
         "laravel/framework": "^9.19",
         "laravel/sanctum": "^3.0",
+        "laravel/socialite": "^5.10",
         "laravel/tinker": "^2.7",
         "laravel/ui": "^4.2",
         "php-flasher/flasher-laravel": "^1.15",
