--- a/composer.json
+++ b/composer.json
@@ -9,6 +9,7 @@
         "barryvdh/laravel-dompdf": "^2.0",
         "barryvdh/laravel-snappy": "^1.0",
         "fakerphp/faker": "^1.23",
+        "fruitcake/laravel-cors": "*",
         "guzzlehttp/guzzle": "^7.2",
         "hazaveh/verify-domain": "^1.0",
         "intervention/image": "^2.7",
@@ -35,7 +36,8 @@
         "psr-4": {
             "App\\": "app/",
             "Database\\Factories\\": "database/factories/",
-            "Database\\Seeders\\": "database/seeders/"
+            "Database\\Seeders\\": "database/seeders/",
+            "Barryvdh\\Cors\\": "^0.11.0"
         }
     },
     "autoload-dev": {
